--- a/data-architect.html
+++ b/data-architect.html
@@ -105,7 +105,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi-corse'>
+<h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi-corse'>
       Database Architect H/F - CDI (Corse) - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">France</span></p>
@@ -237,7 +237,7 @@ dig?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697979008-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697979008-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -245,7 +245,7 @@ dig?...</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697967836-enterpise-data-architect'>Inmarsat Enterpise Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999697967836-enterpise-data-architect'>Inmarsat Enterpise Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -265,7 +265,7 @@ dig?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/tsbjuot5qm5na1nnmajtmea3th'>Enterprise Data Architect | Manifest Solutions</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/tsbjuot5qm5na1nnmajtmea3th'>Enterprise Data Architect | Manifest Solutions</a></h5> 
 <p><span class="badge badge-light">Columbus, OH  Columbus</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -273,7 +273,7 @@ dig?...</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697834480-big-data-architect'>Bosch Group Big Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697834480-big-data-architect'>Bosch Group Big Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -306,7 +306,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi'>
+<h5><a href='https://jellysmack.recruitee.com/l/en/o/database-architect-hf-cdi'>
       Database Architect H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -336,7 +336,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.vertex-solutions.com/job/data-and-cloud/enterprise-data-architect/j14668/'>Enterprise Data Architect Job | Vertex Solutions</a></h5> 
+<h5><a href='https://www.vertex-solutions.com/job/data-and-cloud/enterprise-data-architect/j14668/'>Enterprise Data Architect Job | Vertex Solutions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -352,7 +352,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcompany1/743999695235990-data-architect'>Netcompany Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcompany1/743999695235990-data-architect'>Netcompany Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -368,7 +368,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/omambfwN'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/omambfwN'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -401,7 +401,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p>Oct 4, 2019 ... Our consultants bring deep expertise in Data Science, Machine Learning and AI. 
 We are the trusted analytics partner for several Fortune 100 companies,?...</p>
 <hr/>
-<h5><a href='https://greenzone-solutions-inc.workable.com/j/A7800CFC15'>GreenZone Solutions, Inc. - Jobs: Data Architect - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greenzone-solutions-inc.workable.com/j/A7800CFC15'>GreenZone Solutions, Inc. - Jobs: Data Architect - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 2, 2019 ... Use machine learning, algorithm generation and implementation, and support 
 our Federal Client's business in defining requirements to support machine?...</p>
